--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <section  style="padding-top:20px;">
 
         <div class=donatebutton align=center>
-        	<form>
+        	<form action="https://rzp.io/l/eLS7bFNJLk">
         		<button value="Donate" align=center>Donate</button>
         	</form>
         </div>
